If the name of the UMD format library to be created in the global space is a snake case, add a process to convert it to camel case.

--- a/examples/use-cjs-library/package.json
+++ b/examples/use-cjs-library/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "esm-and-other-format-libraries-starter": "^1.0.0"
   }
 }
